fixed radio btns on smaller screens

--- a/styles/listingEdit.module.css
+++ b/styles/listingEdit.module.css
@@ -186,7 +186,7 @@
   .opts {
     width: 100% !important;
   }
-  .Listing div,
+  .Listing div:not(.option div),
   .Attributes div:not(.BiCheck),
   .Marketing div:not(.BiCheck) {
     width: 96%;
